--- a/src/main/webapp/admin/harrastajat/sopimukset.xhtml
+++ b/src/main/webapp/admin/harrastajat/sopimukset.xhtml
@@ -20,7 +20,7 @@
 			<h:outputText value="#{_sopimus.tyyppi.nimi}" />
 		</ace:column>
 		<ace:column headerText="Maksuväli" styleClass="lefttext">
-			<h:outputText value="#{_sopimus.maksuväli}" />
+			<h:outputText value="#{_sopimus.maksuväli}" rendered="#{_sopimus.tyyppi.kuukausilaskutus}"/>
 		</ace:column>
 		<ace:column headerText="Umpeutuu" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.umpeutuu}">
@@ -28,7 +28,7 @@
 			</h:outputText>
 		</ace:column>
 		<ace:column headerText="Treenikertoja" styleClass="lefttext">
-			<h:outputText value="#{_sopimus.treenikertoja}" />
+			<h:outputText value="#{_sopimus.treenikertoja}" rendered="#{_sopimus.tyyppi.treenikertoja}"/>
 		</ace:column>
 		<ace:column headerText="Luotu" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.luotu}">
