--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -6,6 +6,10 @@
 	xmlns:ace="http://www.icefaces.org/icefaces/components" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
 	<style>
+.body {
+	font-size:90% !important;
+}
+
 .ikoni {
 	height: 40px;
 	width: 40px;
