--- a/src/main/webapp/kirjautuminen.xhtml
+++ b/src/main/webapp/kirjautuminen.xhtml
@@ -31,10 +31,12 @@
 	border: 1px solid #e0e0e0;
 }
 </style>
+<link rel="stylesheet" type="text/css" href="jquery.toastmessage.css"/>
+<script src="jquery-1.4.4.min.js"/>
+<script src="jquery.toastmessage.js"/>
 </h:head>
 <h:body onload="document.getElementById('form:käyttäjänimi').focus();">
 	<f:view>
-		<ace:growlMessages/>	
 		<h:form id="form">
 			<ace:panel header="Kirjaudu" styleClass="taulu">
 				<h:panelGrid columns="2">
