--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -51,7 +51,7 @@
 <h:body>
 	<f:view>
 		<h:form id="form">
-			<h:commandLink action="#{exceptionHandler.tapaSessio()}" value="Kirjaudu ulos" style="margin-right:20px"/>
+			<h:commandLink action="#{exceptionHandler.tapaSessio()}" value="Kirjaudu ulos" immediate="true" style="margin-right:20px"/>
 			<h:commandLink action="/käyttäjä/käyttäjä.xhtml?faces-redirect=true" value="Oma ylläpito" />
 			<ace:tabSet tabChangeListener="#{harrastajaAdmin.päätabiMuuttui}">
 				<ace:tabPane label="Harrastajat">
